<androidx.percentlayout.widget.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ConnectingView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="100dp"
            android:paddingVertical="@dimen/activity_vertical_margin"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:src="@drawable/logo_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textSize="25dp"
            android:text="@string/listOfDevicesHeader"
            android:textColor="@color/colorText"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="60dp"
            android:visibility="visible"
            android:background="@color/colorText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/devicePairingHeader"
            android:padding="@dimen/activity_vertical_margin"
            android:textColor="@color/colorText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/availableDevicesHeader"
            android:textColor="@color/colorText"/>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/devicesListView"
            android:choiceMode="singleChoice" />

    </LinearLayout>

    <TextView
        android:id="@+id/BT_Success_Message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="60dp"
        android:text="@string/connectionSuccessfulMessage"
        android:textSize="25dp"
        android:padding="@dimen/activity_vertical_margin"
        android:visibility="gone"
        android:textColor="@color/colorText"/>

    <LinearLayout
        android:id="@+id/BT_Success_Image"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="60dp"
                android:paddingVertical="@dimen/activity_vertical_margin"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:src="@drawable/logo_green" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/BT_Success_Button"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="bottom">

        <Button
            android:id="@+id/FinishBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnFinishPairingString"
            android:textSize="15dp"
            android:layout_gravity="bottom"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:layout_marginHorizontal="70dp"
            android:padding="@dimen/button_padding"
            android:background="@color/DarkGrey"
            android:textColor="@color/colorText">
        </Button>

    </LinearLayout>


</androidx.percentlayout.widget.PercentRelativeLayout>